create cart test
